--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -1,92 +1,75 @@
 .prose {
-	@apply bg-base-50 text-base-600 bg-transparent max-w-[inherit] dark:text-base-300;
+	@apply max-w-none text-base-300;
 
-	h1, h2, h3, h4, h5, h6 {
-		@apply font-bold text-base-800 dark:text-base-200 mt-[0.5em] relative inline-block;
+	h1, h2, h3, h4 {
+		@apply text-base-300;
 	}
 
-	h2 {
-		@apply text-xl;
-	}
-
-	h3 {
-		@apply text-lg;
+	a {
+		@apply no-underline text-inherit;
 	}
 
 	hr {
-		@apply border-base-300 mb-[1em] dark:border-base-800;
-	}
-
-	strong {
-		@apply bg-clip-text text-transparent bg-gradient-to-br from-primary-500 from-30% to-secondary-500 font-bold;
-	}
-
-	blockquote {
-		@apply border-primary-500 text-base-800 bg-base-200/60 p-3 dark:bg-base-900/60 dark:text-base-300;
-
-		> p {
-			@apply m-0;
-		}
+		@apply my-[2em] border-base-800;
 	}
 
 	ul {
 		@apply pl-[1em];
 
-		li {
-			@apply p-0;
-
-			&::marker {
-				@apply text-base-400 dark:text-base-700;
-			}
+		& > li {
+			@apply p-0 marker:text-base-600;
 		}
 	}
 
-	a:not(.anchor) {
-		@apply no-underline;
+	strong {
+		@apply font-bold text-base-300;
 	}
 
-	.anchor {
-		@apply no-underline absolute h-full w-full hover:before:opacity-100;
+	blockquote {
+		@apply bg-base-800/60 py-3 text-base-300 border-primary-500 rounded-r-md;
 
-		&::before {
-			@apply text-base-400 dark:text-base-700 content-['#'] opacity-0 absolute -left-4;
+		& > p {
+			@apply m-0;
 		}
 	}
 
 	:not(pre) > code {
-		@apply bg-primary-600/10 text-primary-500 dark:text-primary-400 rounded-lg p-1 mx-0.5 dark:bg-primary-300/10 before:content-none after:content-none;
+		@apply bg-base-800/60 my-1 p-0.5 rounded-lg text-base-300/80;
 	}
 
-	[data-rehype-pretty-code-title] {
-		@apply px-4 py-1 text-base-50 border-b rounded-t-md bg-base-800 border-base-700 dark:border-base-800 dark:bg-base-900/60;
-
-		& + pre {
-			@apply rounded-t-none;
-		}
+	pre {
+		@apply mt-0 bg-base-800/60 px-0 relative;
 	}
 
+	/* rehype-pretty-code style */
 	[data-rehype-pretty-code-fragment] {
-		pre {
-			@apply relative mt-0 bg-base-800 px-0 dark:bg-base-900/60;
+		.line {
+			@apply px-4 border-l-2 border-transparent;
+
+			&::before {
+				@apply inline-block w-4 mr-4 py-0.5 text-base-600 text-center;
+				counter-increment: line;
+				content: counter(line);
+			}
+
+			&--highlighted {
+				@apply bg-base-400/10 border-primary-500;
+			}
 		}
 
 		code {
 			@apply grid;
 			counter-reset: line;
 		}
+	}
 
-		.line {
-			@apply px-4 border-l-2 border-transparent;
+	[data-rehype-pretty-code-title] {
+		@apply px-4 py-1 text-base-300 border-b rounded-t-md border-base-700 bg-base-800/60;
 
-			&::before {
-				@apply inline-block w-4 mr-4 py-0.5 text-base-500 dark:text-base-600 text-center;
-				counter-increment: line;
-				content: counter(line);
-			}
-
-			&--highlighted {
-				@apply bg-base-500/30 dark:bg-base-500/10 border-emerald-500;
-			}
+		& + pre {
+			@apply rounded-t-none;
 		}
 	}
 }
+
+
