--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -5,8 +5,12 @@
 @import 'typography.css';
 
 @layer utilities {
-	.text-stroke {
-		@apply text-[120px];
-		-webkit-text-stroke: 4px #262626;
+	.mask-dots {
+		-webkit-mask-image: radial-gradient(rgba(63, 63, 70, 0.8) 10%, transparent 0);
+		-webkit-mask-size: 8px 8px;
+	}
+
+	.bg-dots {
+		-webkit-mask-image: radial-gradient(#000 55%, transparent 75%);
 	}
 }
