--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -13,4 +13,8 @@
 	.bg-dots {
 		-webkit-mask-image: radial-gradient(#000 55%, transparent 75%);
 	}
+
+	.animate-in {
+		animation-delay: calc(var(--index) * 200ms);
+	}
 }
