--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -14,7 +14,7 @@
 		-webkit-mask-image: radial-gradient(#000 55%, transparent 75%);
 	}
 
-	.animate-in {
+	/* .animate-in {
 		animation-delay: calc(var(--index) * 130ms);
-	}
+	} */
 }
