--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -5,29 +5,11 @@
 @import 'typography.css';
 
 @layer utilities {
-	/* tool to create grid background: https://www.stefanjudis.com/blog/a-css-based-background-grid-generator/ */
-	.bg-dots {
-		@apply pointer-events-none bg-repeat bg-[length:12%_22%];
-		background-image: linear-gradient(
-				rgba(59, 130, 246, 0.2) 0.5px,
-				transparent 0.5px,
-				transparent calc(100% - 0.5px),
-				rgba(59, 130, 246, 0.2) calc(100% - 0.5px)
-			),
-			linear-gradient(
-				90deg,
-				rgba(59, 130, 246, 0.25) 0.5px,
-				transparent 0.5px,
-				transparent calc(100% - 0.5px),
-				rgba(59, 130, 246, 0.25) calc(100% - 0.5px)
-			);
-	}
-
-	.mask-dots {
-		-webkit-mask-image: radial-gradient(#0a0a0a, transparent 70%);
-	}
-
 	.layout {
 		@apply mx-auto max-w-[43.75rem] px-6;
+	}
+
+	.opacity-hover {
+		@apply hover:opacity-70 opacity-100 transition-opacity duration-300;
 	}
 }
