style: add  animated-cards util class

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -12,4 +12,15 @@
 	.opacity-hover {
 		@apply hover:opacity-70 opacity-100 transition-opacity duration-300;
 	}
+
+	.animated-cards::before {
+		@apply pointer-events-none absolute select-none rounded-lg opacity-0 transition-opacity duration-300 hover:opacity-100 z-[-1] content-[''] -inset-px;
+		background: radial-gradient(
+		  400px circle at var(--x) var(--y),
+		  theme('colors.accent.500') 0,
+		  theme('colors.primary.500') 25%,
+		  rgba(255, 255, 255, 0) 50%,
+		  transparent 80%
+		);
+	}
 }
