--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -5,7 +5,7 @@
 		@apply mb-[0.5em] tracking-tight w-fit;
 
 		&.anchor > a {
-			@apply font-bold text-transparent bg-clip-text bg-gradient-to-r from-base-200 to-base-200/40;
+			@apply font-bold text-transparent bg-clip-text bg-gradient-to-b from-base-200 from-30% to-base-200/40;
 		}
 	}
 
