--- a/src/styles/rehype.css
+++ b/src/styles/rehype.css
@@ -2,7 +2,7 @@
 	@apply relative my-[2.5em];
 
 	pre {
-		@apply bg-base-800 px-0 before:content-[attr(data-language)] before:absolute before:-top-6 before:right-10 before:bg-base-800 before:px-3 before:py-1 before:font-bold before:rounded-t-lg;
+		@apply bg-neutral-900 px-0 before:content-[attr(data-language)] before:absolute before:-top-6 before:right-10 before:bg-inherit before:px-3 before:py-1 before:font-bold before:rounded-t-lg;
 	}
 
 	code {
@@ -14,12 +14,12 @@
 	@apply pl-4 border-l-2 border-transparent;
 
 	&::before {
-		@apply inline-block w-4 mr-4 py-0.5 text-base-500 text-center;
+		@apply inline-block w-4 mr-4 py-0.5 text-foreground/60 text-center;
 		counter-increment: line;
 		content: counter(line);
 	}
 }
 
 [data-highlighted-line]{
-	@apply bg-base-600/40 border-emerald-500;
+	@apply bg-foreground/40 border-emerald-500;
 }
